# kora

./: .dockerignore  .gitignore  Cargo.toml  Justfile  README.md  deny.toml  keygen.bash
.config/: nextest.toml
.github/workflows/: ci.yml
ansible/: ansible.cfg  requirements.yml
ansible/inventory/: hosts.yml.example
ansible/inventory/group_vars/: devnet.yml
ansible/playbooks/: chaos-node-failure.yml  chaos-rolling-restart.yml  collect-logs.yml  deploy.yml  diagnose.yml  observe.yml  provision.yml  query-metrics.yml  reset.yml  stop.yml
ansible/roles/base/tasks/: main.yml
ansible/roles/chaos/tasks/: restart-one-node.yml
ansible/roles/devnet/tasks/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/firewall/handlers/: main.yml
ansible/roles/firewall/tasks/: main.yml
ansible/roles/firewall/templates/: nftables.conf.j2
ansible/roles/observe/tasks/: main.yml
ansible/roles/reset/tasks/: main.yml
ansible/roles/sync/tasks/: main.yml
changelogs/: pr-69-indexed-response-fidelity.md  pr-70-gas-price-oracle.md  pr-71-pending-mempool-subscriptions.md  pr-73-eth-filter-api.md  pr-74-rpc-rate-limiting.md  pr-75-configurable-node-parameters.md  pr-76-docker-build-runtime.md  pr-77-compact-persisted-overlays.md  pr-78-real-block-timestamps.md
crates/e2e/: Cargo.toml
crates/e2e/src/: harness.rs  lib.rs  setup.rs
crates/e2e/src/tests/: consensus.rs  execution.rs  resilience.rs
crates/network/marshal/: Cargo.toml
crates/network/marshal/src/: actor.rs  archive.rs  lib.rs  (+2 more)
crates/network/transport/: README.md
crates/network/transport-sim/: Cargo.toml
crates/node/config/: Cargo.toml  README.md
crates/node/consensus/: Cargo.toml
crates/node/dkg/: Cargo.toml
crates/node/domain/: Cargo.toml
crates/node/executor/: Cargo.toml
crates/node/executor/src/: adapter.rs  config.rs  context.rs  error.rs  lib.rs  outcome.rs  revm.rs  traits.rs
crates/node/executor/tests/: executor.rs
crates/node/ledger/: Cargo.toml
crates/node/metrics/: Cargo.toml
crates/node/metrics/src/: lib.rs
crates/node/reporters/: Cargo.toml
crates/node/rpc/: Cargo.toml
crates/node/rpc/src/: config.rs  error.rs  eth.rs  filters.rs  indexed_provider.rs  lib.rs  server.rs  state.rs  state_provider.rs  subscription.rs  txpool.rs  types.rs
crates/node/runner/: Cargo.toml  README.md
crates/node/service/: Cargo.toml
crates/node/txpool/: Cargo.toml
crates/storage/backend/: Cargo.toml
crates/storage/handlers/: Cargo.toml
crates/storage/qmdb-ledger/: Cargo.toml
docker/: .dockerignore  Dockerfile  Justfile  README.md  docker-bake.hcl
docker/compose/: devnet.yaml
docker/config/: alertmanager.yml  alerts.yml  loki.yml  prometheus.yml  promtail.yml  recording-rules.yml
docker/grafana/dashboards/: kora-logs.json  kora-overview.json  kora-p2p.json  kora-performance.json  kora-stall-diagnostics.json  kora-transaction-flow.json
docker/scripts/: devnet-health.sh  devnet-run.sh  devnet-stats.sh  entrypoint.sh  grafana-entrypoint.sh  healthcheck.sh
docs/: public-testnet.md
repro-logs/: chaos_monitor.py
repro-logs/commonware-evidence/: README.md  test1-one-node-restart-20260520T173812Z-critical-grep.txt  test2-two-node-restart-20260520T174131Z-node0-nullif-tail.txt  test2-two-node-restart-20260520T174131Z-node3-resolver.txt
repro-logs/test1-one-node-restart-20260520T173812Z/: critical-grep-all.txt  critical-grep-node3.txt  logs-validator-node0.txt  logs-validator-node1.txt  logs-validator-node2.txt  logs-validator-node3.txt  summary.txt
repro-logs/test2-two-node-restart-20260520T174131Z/: critical-grep-all.txt  critical-grep-restarted.txt  logs-validator-node0.txt  logs-validator-node1.txt  logs-validator-node2.txt  logs-validator-node3.txt  summary.txt
testnet-artifacts/: genesis.json  peers.json
testnet-artifacts/node0/: setup.json  validator.key
testnet-artifacts/node1/: setup.json  validator.key
testnet-artifacts/node2/: setup.json  validator.key
tmp/issues/: 167-dkg-alllogs-no-count-cap-oom.md  169-dkg-send-outgoing-drops-messages.md  170-dkg-crash-recovery-skips-rebroadcast.md
(+93 files in other folders)
