[package]
name = "kora-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Application-level Prometheus metrics for Kora nodes"

[lints]
workspace = true

[dependencies]
prometheus-client.workspace = true
