[package]
name = "kora-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "RPC server for Kora nodes"

[lints]
workspace = true

[dependencies]
# HTTP server
axum.workspace = true
tower = { version = "0.5", features = ["limit", "util"] }
tower-http = { version = "0.6", features = ["cors"] }

# JSON-RPC
jsonrpsee = { version = "0.24", features = ["server", "macros"] }

# Alloy types
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }

# Async
tokio = { workspace = true, features = ["net", "sync"] }
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Tracing
tracing.workspace = true

# Misc
parking_lot = "0.12"

# Kora crates
kora-domain = { path = "../domain" }
kora-executor = { path = "../executor" }
kora-indexer = { path = "../../storage/indexer" }
kora-traits = { path = "../../storage/traits" }
kora-txpool = { path = "../txpool" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
k256.workspace = true
sha3.workspace = true
